--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.72'
 }
 
-group 'org.example'
-version '1.0-SNAPSHOT'
+group 'ru.dmitriyt.elliptic'
+version '1.0'
 
 repositories {
     mavenCentral()
@@ -12,5 +12,6 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
+    implementation "org.knowm.xchart:xchart:3.6.5"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
